--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "multiplayer-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Multiplayer Server",
   "main": "index.js",
+  "dependencies": {
+    "express": "^4.13.4",
+    "socket.io": "^1.4.5"
+  },
+  "engines": {
+	"node": "4.1.x"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Marcelo",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.15.2",
-    "socket.io": "^1.7.3"
-  }
+  "license": "ISC"
 }
